--- a/thesis/index.html
+++ b/thesis/index.html
@@ -240,7 +240,8 @@
             nearly 22% in the number of complaints filed since 2012. Most of these complaints were about
             sewer back up, catch basin and street flooding. In <a
                 href="https://www1.nyc.gov/site/dep/news/21-003/city-completes-installation-6-4-miles-new-sewers-water-mains-eltingville-great"
-                target="_blank"><span style="color: #EB614F;">February last year,</span></a> the city reported completion of a $48
+                target="_blank"><span style="color: #EB614F;">February last year,</span></a> the city reported
+            completion of a $48
             million project to upgrade sewers and water mains in the neighborhood. </p>
 
         <p>The neighborhood with the second highest number of
@@ -499,6 +500,14 @@
     </div>
     <div id="heatmap"></div>
     <div class="center-content">
+        <p>Urban flooding is also not just limited to extreme weather events, according to Norton.</p>
+        <p>“Most places in North east and the Midwest are experiencing increased rainfall,” Norton said. “There are
+            shorter, heavier bursts, rather than longer drawn-out rain events and most cities don’t have the
+            infrastructure for it.”</p>
+        <p>“Flooding has been getting worse because of climate change … add to that, there’s been more severe weather
+            events lately,” Shino Tanikawa, the executive director of NYC Soil & Water Conservation District, said. The
+            organization is a government body that works in partnership with the city’s DEP and Parks and Recreation
+            department.</p>
         <p>While Ida was a hurricane, flash floods are becoming increasingly common. In 2021, there were 10 flash-flood
             warnings issued for the city, according to data archived by Iowa State University. That’s the highest it’s
             been since 2006, the earliest available year in the dataset. The National Weather Service defines a flash
@@ -510,7 +519,8 @@
             sun is out, it’s easy to dismiss rain gardens as uncontrolled weed growing at intersections, often jaded
             with trashed pizza boxes, fruit peels and stray plastics.</p>
         <p>There’s signage, sometimes hidden by tall grass, other times visible, but not immediately clear. These rain
-            gardens and bioswales are part of the city’s green infrastructure — built to safeguard the city’s streets.</p>
+            gardens and bioswales are part of the city’s green infrastructure — built to safeguard the city’s streets.
+        </p>
         <p>The initiative to paint the city green began in 2010 with a $1.5 billion commitment from the then-Mike
             Bloomberg administration. The idea was to capture street runoff and excess sewage preventing it from
             entering the city’s waterways.</p>
@@ -535,14 +545,6 @@
         <p>“They can try to improve sewage all they want, but until we keep building on flood-prone streets, we’re not
             really solving the problem,” he said. “It’s like trying to stop a whole pitcher of water with a tea spoon.”
         </p>
-        <p>Urban flooding is also not just limited to extreme weather events, according to Norton.</p>
-        <p>“Most places in North east and the Midwest are experiencing increased rainfall,” Norton said. “There are
-            shorter, heavier bursts, rather than longer drawn-out rain events and most cities don’t have the
-            infrastructure for it.”</p>
-        <p>“Flooding has been getting worse because of climate change … add to that, there’s been more severe weather
-            events lately,” Shino Tanikawa, the executive director of NYC Soil & Water Conservation District, said. The
-            organization is a government body that works in partnership with the city’s DEP and Parks and Recreation
-            department.</p>
         <p>The city’s need for infrastructure upgrades isn’t a first.</p>
         <p>The city was built for the convenience of Dutch traders, Aziz who is a tour guide in the city said. A lot of
             real estate has elevated structures because ships would come up to the shore. But the city wasn't built for
@@ -561,13 +563,12 @@
             alt="Infographic depicting flow of sewage and rainwater during heavy rainfall">
         <p>When the system is
             overwhelmed, wastewater from both homes and street runoff get combined and enter the
-            city’s waterways, as it often happens in neighborhoods surrounding the Gowanus Canal, according to Motzny.
+            city’s waterways, as it often happens in neighborhoods surrounding places like the Gowanus Canal, according to Motzny.
             The city is working to separate sewage wherever possible, she added.</p>
         <p>“We’re also suffering from legacy pollution … Hundred years ago common practice was to put waste into the
             river. Now we have the added problem of storm water overflow,” Tanikawa said.</p>
         <p>Steven Cohen who has taught public management and environmental policy at Columbia University for four
-            decades argues about the efficiency and feasibility of major infrastructure upgrades. </p>
-        <p>Sewage system upgrades of course, come with costs.</p>
+            decades argues about the efficiency and feasibility of major infrastructure upgrades. Sewage system upgrades of course, come with costs.</p>
         <p>“Our sewer system just wasn’t created to deal with the amount of rain we get now,” he said. “Eight or nine
             out of ten rain events won’t overwhelm the system so much … But, the two or three that do overwhelm the
             system and push out a ton of sewage.”</p>
