--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -16,7 +16,7 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
-    <title>Sponge city!</title>
+    <title>Urban Flooding in NYC</title>
 </head>
 
 <body>
