--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -107,8 +107,8 @@
 
             #g-visualization_svg-Artboard_1 .g-pstyle0 {
                 line-height: 14px;
-                height: 14px;
-                font-size: 12px;
+                height: 16px;
+                font-size: 16px;
             }
 
             #g-visualization_svg-Artboard_1 .g-pstyle1 {
@@ -120,7 +120,6 @@
                 height: 14px;
                 font-size: 12px;
                 text-align: center;
-                /* background-color:  rgb(250, 248, 241); */
             }
         </style>
 
@@ -133,8 +132,8 @@
                 <img id="g-visualization_svg-Artboard_1-img" class="g-aiImg" alt=""
                     src="./number_of_complaints/visualization_svg-Artboard_1.png" />
                 <div id="g-ai0-1" class="g-Layer_1 g-aiAbs g-aiPointText"
-                    style="top:4.8662%;margin-top:-7.9px;left:6.7174%;width:535px;">
-                    <p class="g-pstyle0">Number of urban flooding-related complaints dipped in 2019 and 2020 and shot
+                    style="top:4.8662%;margin-top:-7.9px;left:6.7174%;width:605px;">
+                    <p class="g-pstyle0">Complaints dipped in 2019 and 2020 and shot
                         back up in 2021</p>
                 </div>
                 <div id="g-ai0-2" class="g-Layer_1 g-aiAbs g-aiPointText"
@@ -285,7 +284,7 @@
             }
 
             #g-boroughs-complaints-Artboard_1 p {
-                font-family: georgia, 'times new roman', times, serif;  
+                font-family: georgia, 'times new roman', times, serif;
                 line-height: 22px;
                 opacity: 1;
                 letter-spacing: 0em;
@@ -523,9 +522,15 @@
         <p>The initiative to paint the city green began in 2010 with a $1.5 billion commitment from the then-Mike
             Bloomberg administration. The idea was to capture street runoff and excess sewage preventing it from
             entering the city’s waterways.</p>
-        <p>Since the program’s inception, the city has built over 10,700 green infrastructures— most of them being in
-            Queens and Brooklyn.</p>
-        <!-- Add number of green infrastructures per borough -->
+        <p>Since the program’s inception, the city has built over 10,700 green infrastructures. Over 7,000 of these were
+            built in Queens, followed by nearly 5,800 in Brooklyn.</p>
+    </div>
+    <div class="map-container">
+        <div id='maptext'>
+            <div class="title">
+                <p>Trip starts in September 2021</p>
+            </div>
+        </div>
     </div>
     <div id="map"></div>
     <div class="center-content">
@@ -558,16 +563,16 @@
         <p>The city’s current wastewater management system is built to combine domestic sewage with overflow from
             streets. And, the city is actively trying to separate the two sources of sewage. About 40 percent of the
             city is now served by separate sewer systems, Euton said.</p>
-        <img id="infographic" src="infographic.png"
-            alt="Infographic depicting flow of sewage and rainwater during heavy rainfall">
         <p>When the system is
             overwhelmed, wastewater from both homes and street runoff get combined and enter the
-            city’s waterways, as it often happens in neighborhoods surrounding places like the Gowanus Canal, according to Motzny.
+            city’s waterways, as it often happens in neighborhoods surrounding places like the Gowanus Canal, according
+            to Motzny.
             The city is working to separate sewage wherever possible, she added.</p>
         <p>“We’re also suffering from legacy pollution … Hundred years ago common practice was to put waste into the
             river. Now we have the added problem of storm water overflow,” Tanikawa said.</p>
         <p>Steven Cohen who has taught public management and environmental policy at Columbia University for four
-            decades argues about the efficiency and feasibility of major infrastructure upgrades. Sewage system upgrades of course, come with costs.</p>
+            decades argues about the efficiency and feasibility of major infrastructure upgrades. Sewage system upgrades
+            of course, come with costs.</p>
         <p>“Our sewer system just wasn’t created to deal with the amount of rain we get now,” he said. “Eight or nine
             out of ten rain events won’t overwhelm the system so much … But, the two or three that do overwhelm the
             system and push out a ton of sewage.”</p>
