--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -495,8 +495,11 @@
         <p>Ida brought enough rain in just one day to almost completely confine the 305-foot-tall Statue of Liberty. It
             was also the city's fifth wettest day since 1869.</p>
         <h3>The frequency of heavy rainfall events has gone up in the last two decades.</h3>
+        <p>In 2000, the city got 43 inches of rainfall in total. In 2021, that number jumped to nearly 60 inches. The frequency of shorter but more intense bursts has also gone up</p>
+        <p>Hover over the graphic for more!</p>
     </div>
     <div id="heatmap"></div>
+    
     <div class="center-content">
         <p>Urban flooding is also not just limited to extreme weather events, according to Norton.</p>
         <p>“Most places in North east and the Midwest are experiencing increased rainfall,” Norton said. “There are
@@ -526,13 +529,12 @@
             built in Queens, followed by nearly 5,800 in Brooklyn.</p>
     </div>
     <div class="map-container">
-        <div id='maptext'>
+        <div id='map'>
             <div class="title">
-                <p>Trip starts in September 2021</p>
+                <p>This map shows the distribution of green infrastructure in the city</p>
             </div>
         </div>
     </div>
-    <div id="map"></div>
     <div class="center-content">
         <p>“We're at the point where we’ve sited all we can … We’re looking for alternative ways to put in more green
             infrastructure,” Nyleen Euton, green infrastructure grant program manager said.</p>
