--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -499,8 +499,8 @@
         <p>Hover over the graphic for more!</p>
     </div>
     <div id="heatmap"></div>
-    
     <div class="center-content">
+        <p>Data source: Iowa State University</p>
         <p>Urban flooding is also not just limited to extreme weather events, according to Norton.</p>
         <p>“Most places in North east and the Midwest are experiencing increased rainfall,” Norton said. “There are
             shorter, heavier bursts, rather than longer drawn-out rain events and most cities don’t have the
