TIL: Preview can crop. Who knew. WHO knew.
Not me.

--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -544,7 +544,9 @@
         <p>The Gowanus Sponge Park is one such attempt. But there are plenty of challenges to be dealt with, including
             rapid rezoning of the area — building apartments on flood-prone areas, constant maintenance work required on
             rain gardens and invasive plant species growing on these rain gardens.</p>
-        <img src="sponge-park.png">
+            </div>
+        <img class="full-width-image" src="sponge-park.png" alt="Gowanus Sponge Park built to catch sewage overflow">
+        <div class="center-content">
         <p>The streets near the nearly 2-mile-long Gowanus Canal in Brooklyn for instance, are prone to flooding with as
             little as a few inches of rain. Joseph Alexiou, a Gowanus resident and journalist who has authored a book on
             the canal blames real estate development in the area for the problem.</p>
