--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -16,6 +16,31 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
+
+    <!-- HTML Meta Tags -->
+    <title>Urban Flooding in NYC</title>
+    <meta name="description"
+        content="Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets, subway stations and even basement apartments, damaging personal property.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://areenaarora.com/nyc-flooding/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Urban Flooding in NYC">
+    <meta property="og:description"
+        content="Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets, subway stations and even basement apartments, damaging personal property.">
+    <meta property="og:image" content="https://areenaarora.com/nyc-flooding/nyc-cover.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="areenaarora.com">
+    <meta property="twitter:url" content="https://areenaarora.com/nyc-flooding/">
+    <meta name="twitter:title" content="Urban Flooding in NYC">
+    <meta name="twitter:description"
+        content="Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets, subway stations and even basement apartments, damaging personal property.">
+    <meta name="twitter:image" content="https://areenaarora.com/nyc-flooding/nyc-cover.jpg">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <title>Urban Flooding in NYC</title>
 </head>
 
@@ -495,7 +520,8 @@
         <p>Ida brought enough rain in just one day to almost completely confine the 305-foot-tall Statue of Liberty. It
             was also the city's fifth wettest day since 1869.</p>
         <h3>The frequency of heavy rainfall events has gone up in the last two decades.</h3>
-        <p>In 2000, the city got 43 inches of rainfall in total. In 2021, that number jumped to nearly 60 inches. The frequency of shorter but more intense bursts has also gone up</p>
+        <p>In 2000, the city got 43 inches of rainfall in total. In 2021, that number jumped to nearly 60 inches. The
+            frequency of shorter but more intense bursts has also gone up</p>
         <p>Hover over the graphic for more!</p>
     </div>
     <div id="heatmap"></div>
@@ -544,9 +570,9 @@
         <p>The Gowanus Sponge Park is one such attempt. But there are plenty of challenges to be dealt with, including
             rapid rezoning of the area — building apartments on flood-prone areas, constant maintenance work required on
             rain gardens and invasive plant species growing on these rain gardens.</p>
-            </div>
-        <img class="full-width-image" src="sponge-park.png" alt="Gowanus Sponge Park built to catch sewage overflow">
-        <div class="center-content">
+    </div>
+    <img class="full-width-image" src="sponge-park.png" alt="Gowanus Sponge Park built to catch sewage overflow">
+    <div class="center-content">
         <p>The streets near the nearly 2-mile-long Gowanus Canal in Brooklyn for instance, are prone to flooding with as
             little as a few inches of rain. Joseph Alexiou, a Gowanus resident and journalist who has authored a book on
             the canal blames real estate development in the area for the problem.</p>
