--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -49,25 +49,24 @@
     <h1 class="text-on-image">When the next rainstorm hits, how will the concrete jungle soak it up?</h1>
     <div class="center-content">
         <h2 class="center-text">The answer isn’t straightforward</h2>
-        <p>Jamil Aziz, a life-long New Yorker saw the tragedy firsthand when superstorm Sandy raged through his
-            neighborhood almost a decade ago.</p>
+        <p>Jamil Aziz, a life-long New Yorker, saw the tragedy firsthand when superstorm Sandy
+            raged through his Manhattan neighborhood almost a decade ago, just a few blocks
+            from the surging Atlantic Ocean..</p>
         <p>“Water was out. Lights were out below 40th street for what felt like two weeks,” he said. The wind was
             alarming, unlike he’d ever experienced before, he said. “People taped up windows to protect from the wind.”
-        </p>
-        <p>He also saw the local Con Edison power plant explode.</p>
-        <p>“The sky lit up green up for five seconds or so and there was a loud boom and then all lights went out in the
-            neighborhood,” Aziz said. “We live a hop, skip and jump away from the Atlantic Ocean, right in mother nature
-            … Sandy showed how we’ve to respect mother nature.”</p>
-        <p>The hurricane killed 44 city residents and caused an estimated $19 billion in damages and lost economic
-            activity, according to data from the city. It destroyed over 300 houses in a span of mere 48 hours. Millions
-            in the city spent days after with no power supply and no running water.</p>
         <p>Aziz saw apartment buildings’ lobbies get flooded, friends lose cars and other belongings.</p>
         <p>“There were cars floating like rubber duckies on my street … But you know, things like that, as disruptive as
             they are, they bring the city together,” he said.</p>
+        <p>The storm killed 44 city residents and caused an estimated $19 billion in damages and lost economic
+            activity, according to data from the city. It destroyed over 300 houses in a span of mere 48 hours. Millions
+            in the city spent days after with no power supply and no running water.</p>
+        <p>It marked the latest warning call about how increasingly violent storms threaten
+            lives and property in a city where precious little green space could soak in the water.</p>
+
         <h3>
             Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets,
             subway
-            stations and even basement apartments, damaging personal property.</h3>
+            stations and even basement apartments.</h3>
 
         <p>New York has the most number of people
             living in high-risk flood zones, compared to other cities in the country, according to data from the city,
