--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -66,9 +66,13 @@
         <h3>
             Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets,
             subway
-            stations and even basement apartments.</h3>
-
-        <p>New York has the most number of people
+            stations and even basement apartments. Some neighborhoods have seen as much as a 150% increase in the number of complaints filed since 2000. This comes at a time when climate change is making strong rain events more frequent</h3>
+        <p>Since 2012, city’s residents have lodged 309,830 flooding and sewer overflow-related complaints to the city,
+            according to the city’s 311-complaints’ database. Over the last decade, the city has seen a nearly 18% icnrease in complaints filed.</p>
+            <p>Three-one-one is a residents’ hotline used to report
+            non-urgent problems. For flooding and sewage related issues, the complaints are routed to the Department of
+            Environmental Protection.</p>
+        <p>New York's over 8 million population has the most number of people
             living in high-risk flood zones, compared to other cities in the country, according to data from the city,
             making New Yorkers prone to property damage in heavy rain events— which are becoming increasingly more
             frequent.
@@ -253,11 +257,6 @@
 
         <!-- End ai2html - 2022-08-07 10:48 -->
 
-        <p>Since 2012, city’s residents have lodged 309,830 flooding and sewer overflow-related complaints to the city,
-            according to the city’s 311-complaints’ database. Three-one-one is a residents’ hotline used to report
-            non-urgent problems. For flooding and sewage related issues, the complaints are routed to the Department of
-            Environmental Protection. Calling in for a complaint can take anywhere between 12-15 minutes depending on
-            the hold-time. Complaints can also be filed online by filing out a simple form.</p>
         <p>Most complaints have always come from Queens and Brooklyn. More narrowly, the single neighborhood with the
             most complaints filed is Great Kills neighborhood in Staten Island, which has seen an increase of
             nearly 22% in the number of complaints filed since 2012. Most of these complaints were about
