--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -45,10 +45,11 @@
 </head>
 
 <body>
-    <img src="rain.jpg" class="hero-image" alt="New York City">
-    <h1 class="text-on-image">When the next rainstorm hits, how will the concrete jungle soak it up?</h1>
+    <img src="new-rain-cover.jpg" class="hero-image" alt="New York City">
+    <h1 class="text-on-image">When the next rainstorm hits, <br>how will the concrete jungle soak it up?</h1>
+    <p id="text-on-image-p">Rain storms are becoming increasingly more frequent. <br>And, New Yorkers are filing more urban-flooding complaints to the city.</p>
     <div class="center-content">
-        <h2 class="center-text">The answer isn’t straightforward</h2>
+        <h2 class="center-text">The solution isn’t straightforward</h2>
         <p>Jamil Aziz, a life-long New Yorker, saw the tragedy firsthand when superstorm Sandy
             raged through his Manhattan neighborhood almost a decade ago, just a few blocks
             from the surging Atlantic Ocean..</p>
@@ -528,12 +529,13 @@
         <p>Ida brought enough rain in just one day to almost completely confine the 305-foot-tall Statue of Liberty. It
             was also the city's fifth wettest day since 1869.</p>
         <p>The frequency of heavy rainfall events has gone up in the last two decades.</p>
-        
-        <p>Hover over the graphic for more!</p>
     </div>
-    <div id="heatmap"></div>
+    <div id="heatmap-container">
+        <p class="top-right">Hover over the graphic for details</p>
+        <div id="heatmap"></div>
+        <p class="bottom-left">Data source: Iowa State University</p>
+    </div>
     <div class="center-content">
-        <p>Data source: Iowa State University</p>
         <p>Canarsie in Brooklyn is another neighborhood with high number of complaints filed. The area saw a 6% increase over the last decade. The neighborhood has <a href="https://www.unitedstateszipcodes.org/11234/" target="_blank"><span style="color: #EB614F;">nearly 34,000</span></a> housing units, according to data from the United States Postal Service.
             Overall, in over 5,000 instances, the city found that flooding conditions
             were caused by excessive rain.</p>
