--- a/street-flooding/index.html
+++ b/street-flooding/index.html
@@ -90,9 +90,10 @@
             the complaints are routed to the Department of Environmental Protection.
         </p>
         <p>Of the five boroughs, Staten Island is the least populated with 470,000 residents, according to the 2020
-            census. Yet the borough reported the highest number of flooding complaints during the decade included in the
-            study.
-        </p>
+            census. </p>
+            <!-- Yet the borough reported the highest number of flooding complaints during the decade included in the -->
+            <!-- study. -->
+        
         <p>For 2020, 2021 and the beginning of this year, data from the same source shows a different trend, with most
             complaints lodged by Queens residents, followed by Brooklynites. That said, broken down by zip codes, the
             highest number of complaints come from one particular zip code: Staten Island’s 10314 zipcode. Over 1700
