--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -484,7 +484,7 @@
         </div>
 
         <!-- End ai2html - 2022-08-07 10:06 -->
-        <p>While Brooklyn and Queens have always filed the most number of complaints, Staten Island and Bronx saw the biggest increase over the years. Staten Island saw a nearly 85% increase, most of it between 2020 and 2021.</p>
+        <p>While Brooklyn and Queens have always filed the most number of complaints, Staten Island and Bronx saw the biggest increase over the years. Of the five boroughs, Staten Island is the least populated with 470,000 residents, according to the 2020 census. The borough saw a nearly 85% increase, most of it between 2020 and 2021.</p>
         <p>The annual rainfall in New York City is about 47 inches, according to the National
             Weather Service. Sea level in the city has risen at least a foot in the last century, according to the city.
         </p>
