Fixed typos, updated story

--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -72,7 +72,7 @@
             frequent</h3>
         <p>Since 2012, city’s residents have lodged 309,830 flooding and sewer overflow-related complaints to the city,
             according to the city’s 311-complaints’ database. Over the last decade, the city has seen a nearly 18%
-            icnrease in complaints filed.</p>
+            increase in complaints filed.</p>
         <p>Three-one-one is a residents’ hotline used to report
             non-urgent problems. For flooding and sewage related issues, the complaints are routed to the Department of
             Environmental Protection.</p>
@@ -254,10 +254,9 @@
         <!-- End ai2html - 2022-08-07 10:48 -->
         <p>New York's over 8 million population has the most number of people
             living in high-risk flood zones, compared to other cities in the country, <a href="https://www1.nyc.gov/assets/planning/download/pdf/plans-studies/climate-resiliency/flood-risk-nyc-info-brief.pdf" target="_blank"><span style="color: #EB614F;">according to data from the city,</span></a>
-            making New Yorkers prone to property damage in heavy rain events— which are becoming increasingly more
-            frequent.
+            making New Yorkers prone to property damage in heavy rain events.
             The number of New Yorkers living in the city’s floodplain is higher than the entire
-            population of other major cities like Cleveland, Ohio and Tampa, Florida.
+            populations of other major cities like Cleveland, Ohio and Tampa, Florida.
         </p>
         <h3>To tackle urban flooding head on, the city has some plans to soak up the rain — whether these steps are
             enough or not has residents and experts divided.</h3>
@@ -484,10 +483,7 @@
         </div>
 
         <!-- End ai2html - 2022-08-07 10:06 -->
-        <p>While Brooklyn and Queens have always filed the most number of complaints, Staten Island and Bronx saw the biggest increase over the years. Of the five boroughs, Staten Island is the least populated with 470,000 residents, according to the 2020 census. The borough saw a nearly 85% increase, most of it between 2020 and 2021.</p>
-        <p>The annual rainfall in New York City is about 47 inches, according to the National
-            Weather Service. Sea level in the city has risen at least a foot in the last century, according to the city.
-        </p>
+        <p>While Brooklyn and Queens have always filed the most number of complaints, Staten Island and Bronx saw the biggest increase over the years. Of the five boroughs, Staten Island is the least populated with 470,000 residents, according to the 2020 census. The borough saw a nearly 85% increase, most of it between 2020 and 2021. Only one borough, Manhattan, saw a decrease over the years.</p>
         <p>Urban flooding doesn’t just cause damage to property; in a city as fast-paced as New York, it also disrupts
             movement causing loss of work hours and wages. About two thirds of the city is covered with concrete, making
             it highly vulnerable to overflowing streets. As cities have grown, they’ve added a lot of
@@ -528,7 +524,8 @@
             in basement apartment units.</p>
         <p>Ida brought enough rain in just one day to almost completely confine the 305-foot-tall Statue of Liberty. It
             was also the city's fifth wettest day since 1869.</p>
-        <p>The frequency of heavy rainfall events has gone up in the last two decades.</p>
+        <p>The annual rainfall in New York City is about 47 inches, according to the National
+            Weather Service. Sea level in the city has risen at least a foot in the last century, according to the city. The frequency of heavy rainfall events has gone up in the last two decades.</p>
     </div>
     <div id="heatmap-container">
         <p class="top-right">Hover over the graphic for details</p>
