--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -16,6 +16,10 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&display=swap"
+        rel="stylesheet">
 
     <!-- HTML Meta Tags -->
     <title>Urban Flooding in NYC</title>
@@ -47,7 +51,8 @@
 <body>
     <img src="new-rain-cover.jpg" class="hero-image" alt="New York City">
     <h1 class="text-on-image">When the next rainstorm hits, <br>how will the concrete jungle soak it up?</h1>
-    <p id="text-on-image-p">Rain storms are becoming increasingly more frequent. <br>And, New Yorkers are filing more urban-flooding complaints to the city.</p>
+    <p id="text-on-image-p">Rain storms are becoming increasingly more frequent. <br>And, New Yorkers are filing more
+        urban-flooding complaints to the city.</p>
     <div class="center-content">
         <h2 class="center-text">The solution isn’t straightforward</h2>
         <p>Jamil Aziz, a life-long New Yorker, saw the tragedy firsthand when superstorm Sandy
@@ -67,7 +72,8 @@
         <h3>
             Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets,
             subway
-            stations and even basement apartments. Some neighborhoods such as Bull's Head in Staten Island have seen as much as a 150% increase in the number
+            stations and even basement apartments. Some neighborhoods such as Bull's Head in Staten Island have seen as
+            much as a 150% increase in the number
             of complaints filed since 2000. This comes at a time when climate change is making strong rain events more
             frequent</h3>
         <p>Since 2012, city’s residents have lodged 309,830 flooding and sewer overflow-related complaints to the city,
@@ -253,14 +259,18 @@
         </div>
         <!-- End ai2html - 2022-08-07 10:48 -->
         <p>New York's over 8 million population has the most number of people
-            living in high-risk flood zones, compared to other cities in the country, <a href="https://www1.nyc.gov/assets/planning/download/pdf/plans-studies/climate-resiliency/flood-risk-nyc-info-brief.pdf" target="_blank"><span style="color: #EB614F;">according to data from the city,</span></a>
+            living in high-risk flood zones, compared to other cities in the country, <a
+                href="https://www1.nyc.gov/assets/planning/download/pdf/plans-studies/climate-resiliency/flood-risk-nyc-info-brief.pdf"
+                target="_blank"><span style="color: #EB614F;">according to data from the city,</span></a>
             making New Yorkers prone to property damage in heavy rain events.
             The number of New Yorkers living in the city’s floodplain is higher than the entire
             populations of other major cities like Cleveland, Ohio and Tampa, Florida.
         </p>
         <h3>To tackle urban flooding head on, the city has some plans to soak up the rain — whether these steps are
             enough or not has residents and experts divided.</h3>
-        <p>Over the years, most complaints have always come from Queens and Brooklyn. More narrowly, the single neighborhood with the most complaints filed is Great Kills neighborhood in Staten Island, which has seen an increase of
+        <p>Over the years, most complaints have always come from Queens and Brooklyn. More narrowly, the single
+            neighborhood with the most complaints filed is Great Kills neighborhood in Staten Island, which has seen an
+            increase of
             nearly 22% in the number of complaints filed since 2012. Most of these complaints were about
             sewer back up, catch basin and street flooding. In <a
                 href="https://www1.nyc.gov/site/dep/news/21-003/city-completes-installation-6-4-miles-new-sewers-water-mains-eltingville-great"
@@ -483,7 +493,10 @@
         </div>
 
         <!-- End ai2html - 2022-08-07 10:06 -->
-        <p>While Brooklyn and Queens have always filed the most number of complaints, Staten Island and Bronx saw the biggest increase over the years. Of the five boroughs, Staten Island is the least populated with 470,000 residents, according to the 2020 census. The borough saw a nearly 85% increase, most of it between 2020 and 2021. Only one borough, Manhattan, saw a decrease over the years.</p>
+        <p>While Brooklyn and Queens have always filed the most number of complaints, Staten Island and Bronx saw the
+            biggest increase over the years. Of the five boroughs, Staten Island is the least populated with 470,000
+            residents, according to the 2020 census. The borough saw a nearly 85% increase, most of it between 2020 and
+            2021. Only one borough, Manhattan, saw a decrease over the years.</p>
         <p>Urban flooding doesn’t just cause damage to property; in a city as fast-paced as New York, it also disrupts
             movement causing loss of work hours and wages. About two thirds of the city is covered with concrete, making
             it highly vulnerable to overflowing streets. As cities have grown, they’ve added a lot of
@@ -498,15 +511,17 @@
             the need for adding more green infrastructure in tandem with urban planning.</p>
         <p>The easiest low hanging fruit, which is what the city is already doing is building more green infrastructure,
             Norton said. “But, it’s usually disruptive to life as it is.” </p>
-        <p>Through various other city programs, including the Bluebelt system, the city is trying to improve its
-            drainage. The Bluebelt system drains 16 watersheds located at the island’s southern end impacting nearly
-            10,000 acres of land. Now the city has a new way of tackling the problem. One that involves shifting some of
+        <p>Through various other city programs, including the Bluebelt initiative, the city is trying to improve its
+            drainage. The Bluebelt program, which was originally implemented in Staten Island, adds natural watersheds
+            impacting nearly
+            10,000 acres of land to improve stormwater management. Now the city has a new way of tackling the problem.
+            One that involves shifting some of
             the burden on private property owners.</p>
         <p>In February, the city added another tool to its armor by implementing a new stormwater ruling requiring newly
             developed or redeveloped properties to manage stormwater on site. The new program’s impact remains to be
             seen, but advocates such as Amy Motzny, a senior planner at the Gowanus Canal Conservancy are hopeful of its
             merits. The conservancy is a non-profit group that advocates for clean water.</p>
-        <p>The city’s need for infrastructure upgrades isn’t a first.</p>
+        <p class="bold-text">The city’s need for infrastructure upgrades isn’t a first.</p>
         <p>The city was built for the convenience of Dutch traders, Aziz who is a tour guide in the city said. A lot of
             real estate has elevated structures because ships would come up to the shore. But the city wasn't built for
             a changing climate, he added.</p>
@@ -517,15 +532,17 @@
             the ongoing climate crisis and increasingly more frequent extreme weather events. However, the simple
             sounding cocktail – adding more green spaces and improving sewage flow — involves plenty of challenges. It
             would involve tearing down pipes and rebuilding sewage lines and streets to better manage overflows.</p>
-            <p>In 2000, the city got 43 inches of rainfall in total. In 2021, that number jumped to nearly 60 inches. The
-                frequency of shorter but more intense bursts has also gone up</p>
+        <p>In 2000, the city got 43 inches of rainfall in total. In 2021, that number jumped to nearly 60 inches. The
+            frequency of shorter but more intense bursts has also gone up</p>
         <p>Last year, the city was reminded of Sandy woes when Hurricane Ida hit, bringing in a little over eight inches
-            of rain in just a day. It disrupted the city that otherwise never sleeps. The subsequent flash flooding and rain killed at least 42 people — 13 in the city, most of them
+            of rain in just a day. It disrupted the city that otherwise never sleeps. The subsequent flash flooding and
+            rain killed at least 42 people — 13 in the city, most of them
             in basement apartment units.</p>
         <p>Ida brought enough rain in just one day to almost completely confine the 305-foot-tall Statue of Liberty. It
             was also the city's fifth wettest day since 1869.</p>
         <p>The annual rainfall in New York City is about 47 inches, according to the National
-            Weather Service. Sea level in the city has risen at least a foot in the last century, according to the city. The frequency of heavy rainfall events has gone up in the last two decades.</p>
+            Weather Service. Sea level in the city has risen at least a foot in the last century, according to the city.
+            The frequency of heavy rainfall events has gone up in the last two decades.</p>
     </div>
     <div id="heatmap-container">
         <p class="top-right">Hover over the graphic for details</p>
@@ -533,7 +550,10 @@
         <p class="bottom-left">Data source: Iowa State University</p>
     </div>
     <div class="center-content">
-        <p>Canarsie in Brooklyn is another neighborhood with high number of complaints filed. The area saw a 6% increase over the last decade. The neighborhood has <a href="https://www.unitedstateszipcodes.org/11234/" target="_blank"><span style="color: #EB614F;">nearly 34,000</span></a> housing units, according to data from the United States Postal Service.
+        <p>Canarsie in Brooklyn is another neighborhood with high number of complaints filed. The area saw a 6% increase
+            over the last decade. The neighborhood has <a href="https://www.unitedstateszipcodes.org/11234/"
+                target="_blank"><span style="color: #EB614F;">nearly 34,000</span></a> housing units, according to data
+            from the United States Postal Service.
             Overall, in over 5,000 instances, the city found that flooding conditions
             were caused by excessive rain.</p>
         <p>Urban flooding is also not just limited to extreme weather events, according to Norton.</p>
