--- a/nyc-flooding/index.html
+++ b/nyc-flooding/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-    <img src="new-rain-cover.jpg" class="hero-image" alt="New York City">
+    <img src="rain.jpg" class="hero-image" alt="New York City">
     <h1 class="text-on-image">When the next rainstorm hits, <br>how will the concrete jungle soak it up?</h1>
     <p id="text-on-image-p">Rain storms are becoming increasingly more frequent. <br>And, New Yorkers are filing more urban flooding-related complaints to the city.</p>
     <div class="center-content">
@@ -65,11 +65,12 @@
             lives and property in a city where there isn't enough green space to soak in the water.</p>
 
         <h3>
-            Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets,
+            Year after year since, a growing number of New Yorkers have been complaining about urban flooding ravaging their streets,
             subway
             stations and even basement apartments. Some neighborhoods such as Bull's Head in Staten Island have seen as much as a 150% increase in the number
-            of complaints filed since 2000. This comes at a time when climate change is making strong rain events more
-            frequent</h3>
+            of complaints filed since 2000. This comes at a time of increasing number of violent storms, resulting from climate change that scientist blame at
+            least in part of increasing greenhouse gases, fossil fuel consumption and other human
+            activities.</h3>
         <p>Since 2012, city’s residents have lodged 309,830 flooding and sewer overflow-related complaints to the city,
             according to the city’s 311-complaints’ database. Over the last decade, the city has seen a nearly 18%
             increase in complaints filed.</p>
@@ -255,7 +256,7 @@
         <p>New York's over 8 million population has the most number of people
             living in high-risk flood zones, compared to other cities in the country, <a href="https://www1.nyc.gov/assets/planning/download/pdf/plans-studies/climate-resiliency/flood-risk-nyc-info-brief.pdf" target="_blank"><span style="color: #EB614F;">according to data from the city,</span></a>
             making New Yorkers prone to property damage in heavy rain events.
-            The number of New Yorkers living in the city’s floodplain is higher than the entire
+            The number of New Yorkers living in the city’s floodplain—400,000— is higher than the entire
             populations of other major cities like Cleveland, Ohio and Tampa, Florida.
         </p>
         <h3>To tackle urban flooding head on, the city has some plans to soak up the rain — whether these steps are
