Added visuals page

--- a/index.html
+++ b/index.html
@@ -73,12 +73,18 @@
         <h2>Here's some of my work</h2>
         <div class="cards-wrapper">
             <div class="each-card">
+                <a href="/visuals/" target="_blank">
+                    <p class="card-headline">CHARTS, 2022 EDITION</p>
+                    <img src="./card-photos/chart.png" alt="Chart" style="width:100%">
+                    <p class="card-description">Here's a collection of some of my visuals from this year!
+                    </p>
+                </a>
+            </div>
+            <div class="each-card">
                 <a href="/mapping/" target="_blank">
                     <p class="card-headline">LEARNING MAPPING</p>
                     <img src="./card-photos/map.jpg" alt="Map" style="width:100%">
-                    <p class="card-description">On this page, I'll be cataloging homework from my mapping class over the
-                        summer
-                    </p>
+                    <p class="card-description">Experiments in mapping with Mapbox</p>
                 </a>
             </div>
             <div class="each-card">
@@ -98,6 +104,7 @@
                         hours than regular hours ...
                     </p>
                 </a>
+                <a href="/d3-project/">I also tried to visualize the same data with D3. Click here to check it out!</a>
             </div>
             <div class="each-card">
                 <a href="/style-guides/" target="_blank">
