--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         Pilgrims now pray in front of the rock, seeking its blessings, Guru added ...</p>
                 </a>
             </div>
-            <div class="each-card">
+            <!-- <div class="each-card">
                 <a href="https://github.com/areenaarora/vaccines-project" target="_blank">
                     <p class="card-headline">COMPARING DIFFERENT COVID VACCINES</p>
                     <img src="./card-photos/vaccines.jpg" alt="Vaccines" style="width:100%">
@@ -169,7 +169,7 @@
                         Pfizer and Moderna start with
                         the same sentences ...</p>
                 </a>
-            </div>
+            </div> -->
             <div class="each-card">
                 <a href="https://github.com/areenaarora/ny-spills" target="_blank">
                     <p class="card-headline">HAZARDOUS MATERIAL SPILLS</p>
