--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="column">
             <h2>Select projects</h2>
             <ol>
-                <li><a href="/comparing-newsrooms-styleguides/">
+                <li><a href="/style-guides/">
                         Comparing newsrooms' styleguides—Talk at NICAR, 2022 in Atlanta</a></li>
                 <p>Lightning talk at NICAR 2022 on a project that compares different newsrooms' publically available
                     styleguides.</p>
