--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="header-div">
         <h1>Areena Arora</h1>
         <button id="resume_button">
-            <a href="/Areena-Arora_Resume.pdf">
+            <a href="/Areena Arora_Resume.pdf">
                 <p>Download my resume</p>
             </a></button>
         <marquee>
