--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="topper">
         <h1> Hi!</h1>
-        <h2 class="tabbed">I'm Areena Arora</h2>
+        <h2 class="tabbed">I'm Areena Arora!</h2>
         <p class="subhead">
             ✨Data Journalist. House plants and Chai enthusiast.
         </p>
