--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1> Hi!</h1>
         <h2 class="tabbed">I'm Areena Arora!</h2>
         <p class="subhead">
-            ✨Data Journalist. House plants and Chai enthusiast.
+            Data Journalist. House plants and Chai enthusiast.
         </p>
         <p>I'm interested in covering the environment, stories of policy making and faith and how they intersect with
             lived experiences. I'm committed to building an open data culture for the newsrooms I work in. I love
